--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>carRental</description>
     <properties>
         <java.version>21</java.version>
+        <json-path.version>2.9.0</json-path.version>
     </properties>
     <dependencies>
         <dependency>
