--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-server.port = 8080
-
-spring.h2.console.path=/console
-spring.h2.console.enabled=true
-
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./carRentalDb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.profiles.active=local
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
