--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -3,7 +3,8 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: "jdbc:h2:mem:testDb;DB_CLOSE_DELAY=-1"
+    url: "jdbc:h2:mem:testDb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
+
     username: "sa"
     password:
   jpa:
